# PLCSimulator

./: CMakeLists.txt  Makefile
src/: main.cpp  register_manager.cpp  register_manager.h
src/protocol/: modbus_parser.cpp  modbus_parser.h  modbus_request.h
tests/: test_main.cpp  test_modbus_parser.cpp  test_register_manager.cpp
